--- a/check.html
+++ b/check.html
@@ -1,21 +1,49 @@
-<!-- Add lang-en class to English text -->
-<h1 class="lang-en">Hi, <br />I am <span id="amm">Ammar</span> <br /></h1>
-<span class="lang-en" id="type"></span><br /><br />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Amazon Clone</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<!-- Add lang-es class to Spanish text -->
-<h1 class="lang-es" style="display:none;">Hola, <br />Soy <span id="amm">Ammar</span> <br /></h1>
-<span class="lang-es" style="display:none;" id="type"></span><br /><br />
+  <main>
+    <section class="products">
+      <div class="product">
+        <img src="product1.jpg" alt="Product 1">
+        <h3>Product 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="product2.jpg" alt="Product 2">
+        <h3>Product 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="product3.jpg" alt="Product 3">
+        <h3>Product 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button>Add to Cart</button>
+      </div>
+    </section>
+  </main>
 
-<!-- Add lang-fr class to French text -->
-<h1 class="lang-fr" style="display:none;">Salut, <br />Je suis <span id="amm">Ammar</span> <br /></h1>
-<span class="lang-fr" style="display:none;" id="type"></span><br /><br />
-
-<!-- Add lang-de class to German text -->
-<h1 class="lang-de" style="display:none;">Hallo, <br />Ich bin <span id="amm">Ammar</span> <br /></h1>
-<span class="lang-de" style="display:none;" id="type"></span><br /><br />
-
-<!-- Language buttons -->
-<button onclick="changeLanguage('en')">English</button>
-<button onclick="changeLanguage('es')">Español</button>
-<button onclick="changeLanguage('fr')">Français</button>
-<button onclick="changeLanguage('de')">Deutsch</button>
+  <footer>
+    <p>&copy; 2022 Amazon Clone. All rights reserved.</p>
+  </footer>
+</body>
+</html>
